--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ pandas-datareader = "^0.10.0"
 SQLAlchemy = "^1.4.41"
 psycopg2 = "^2.9.3"
 SQLAlchemy-Utils = "^0.38.3"
+google-api-python-client = "^2.62.0"
+google-cloud-storage = "^2.5.0"
+google-cloud-scheduler = "^2.7.1"
 
 [tool.poetry.dev-dependencies]
 
