--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ SQLAlchemy-Utils = "^0.38.3"
 google-api-python-client = "^2.62.0"
 google-cloud-storage = "^2.5.0"
 google-cloud-scheduler = "^2.7.1"
+google-cloud-pubsub = "^2.13.7"
 
 [tool.poetry.dev-dependencies]
 
