--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ google-api-python-client = "^2.62.0"
 google-cloud-storage = "^2.5.0"
 google-cloud-scheduler = "^2.7.1"
 google-cloud-pubsub = "^2.13.7"
+fastprogress = "^1.0.3"
+tqdm = "^4.64.1"
 
 [tool.poetry.dev-dependencies]
 
