--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ google-cloud-scheduler = "^2.7.1"
 google-cloud-pubsub = "^2.13.7"
 fastprogress = "^1.0.3"
 tqdm = "^4.64.1"
+yfinance = "^0.2.63"
 
 [tool.poetry.dev-dependencies]
 
